--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <img src="./assets/img/desarrolloweb2021t.svg" alt="">
 
     </header>
-    <main class="container-flush">
+    <main class="container-fluid">
         <div class="row central">
             <div class="left  col-md-5 ">
                 <div class="left__box ">
